# study

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  tox.ini
algorithms/: fibonacci.py  leetcode.py  sorts.py  test_common.py  test_fi.py  test_lc.py  test_sorts.py  trees.py  yandex.py
examples/: async.py  mro.py  proxy_methods.py
utils/: profilers.py
